# watame

./: .env.example  .rustfmt.toml  Cargo.toml  Dockerfile  LICENCE  Readme.md  docker_run.sh
res/sql/: create_tags.sql  create_users.sql  drop_all.sql
sql/: create_posts.sql  create_tags.sql  create_users.sql  drop_all.sql
src/: auth.rs  error.rs  main.rs  settings.rs
src/database/: enums.rs  error.rs  mod.rs  post.rs  tag.rs  user.rs
src/pages/: mod.rs  post.rs  search.rs  tag.rs  user.rs
