[package]
name = "watame"
version = "0.0.0"
authors = ["serxka <serxka@protonmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.6.0-beta.6"
actix-multipart = "0.4.0-beta.5"
actix-web = "4.0.0-beta.8"
async-std = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"]}
deadpool-postgres = "0.9"
derive_more = "0.99"
dotenv = "0.15"
futures = "0.3"
image = "0.23"
log = "0.4"
sanitize-filename = "0.2"
serde = "1.0"
serde_json = "1.0"
simple_logger = "1"
structopt = { version = "0.3", default-features = false }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
