[package]
name = "watame"
version = "0.0.0"
authors = ["serxka <serxka@protonmail.com>"]
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-files = { version = "0.6", optional = true}
actix-multipart = "0.4"
actix-service = "2.0"
actix-web = { version = "4.0", features = ["rustls"]}
async-std = "1"
base64 = "0.13"
byteorder = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"]}
deadpool-postgres = "0.10"
derive_more = "0.99"
dotenv = "0.15"
futures = "0.3"
image = "0.23"
log = "0.4"
postgres-types = { version = "0.2", features = ["derive"] }
rand = "0.8"
redis = { version = "0.21", features = ["tokio-comp", "aio"]}
rust-argon2 = "1.0"
rustls = "0.20"
rustls-pemfile = "1.0"
sanitize-filename = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "2"
structopt = { version = "0.3", default-features = false }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

[features]
default = ["host-storage"]
host-storage = ["actix-files"]
